      beginning of its arguments, fixing a bug new in Conary 0.70.3.
    * The Requires policy can now be given synthetic RPATH elements;
      this is useful when programs are only intended to be run under
      scripts that set LD_LIBRARY_PATH and so do not intrinsically have
      the information they need to find their libraries.
  o Repository Changes
    * The repository now serves up stored OpenPGP keys as a "Limited
      Keyserver"; users can retrieve keys, but not search or browse them.
      The keys are available via /getOpenPGPKey?search=KEY_ID. This
      is meant only to allow conary to automatically retrieve OpenPGP
      keys used to sign packages.

Changes in 0.70.3:
  o Client Changes (conary)
    * Conary now works harder to avoid having separate erase/installs,
      instead preferring to link those up into one update when possible.
    * Conary configuration now supports contexts.  Contexts are defined in 
      sections starting with a [<name>] line, and provide contextual 
      configurations for certain variables, defined in the man page.  All 
      configuration options after the [<name>] will be associated with that 
      context, and will override the default configuration when that context 
      is active.  The current context can be selected by using the --context 
      parameter, or by setting the CONARY_CONTEXT environment variable. 
    * 'conary config --show-contexts' will display the available contexts
  o Build Changes (cvc)
    * A local cook of a trove foo will ensure that the changeset created is 
      installable on your local system, by making sure the version number 
      created is unique.
    * The builddir is no longer allowed to appear in ELF RPATHs.
    * The build documentation strings have been significantly updated
      to document the fact that for most strings, a relative path
      is relative to the builddir, but an absolute path is relative
      to the destdir.