@@ -15,6 +15,10 @@ Changes in 0.70.4:
       this is useful when programs are only intended to be run under
       scripts that set LD_LIBRARY_PATH and so do not intrinsically have
       the information they need to find their libraries.
+    * Added --test to clone, branch, and shadow commands
+    * Clone now supports --skip-build-info for less rigid version checks
+      on cloned troves
+    * Fixed usage message to better reflect reality
   o Repository Changes
     * The repository now serves up stored OpenPGP keys as a "Limited
       Keyserver"; users can retrieve keys, but not search or browse them.
